--- a/src/style/style.css
+++ b/src/style/style.css
@@ -25,7 +25,8 @@ body {
 	color: var(--white-color);
 }
 
-.container {
+.container,
+.first-view {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -33,6 +34,10 @@ body {
 
 .green-color {
 	color: var(--green-color);
+}
+
+.first-view {
+	animation: fadein 2s ease-in-out;
 }
 
 .hero-section {
@@ -195,6 +200,7 @@ body {
 	background-color: var(--green-color);
 	margin-top: -5px;
 }
+
 .container-cta {
 	display: flex;
 	flex-direction: row;
@@ -241,6 +247,9 @@ body {
 	width: auto;
 	padding: 0px min(5%, 5px);
 	margin: 80px 0;
+	animation: scrolling;
+	animation-timeline: view();
+	animation-range: cover 0% cover 50%;
 }
 
 .info-prices,
@@ -519,6 +528,9 @@ ul {
 	justify-content: center;
 	align-items: center;
 	gap: 30px;
+	animation: scrolling;
+	animation-timeline: view();
+	animation-range: cover 0% cover 30%;
 }
 
 .button-cta2 {
@@ -656,6 +668,9 @@ ul {
 	justify-content: center;
 	align-items: center;
 	padding: 60px 0;
+	animation: scrolling;
+	animation-timeline: view();
+	animation-range: cover 0% cover 30%;
 }
 
 .card-cta4 {
@@ -775,5 +790,25 @@ footer .rights p {
 	.whatsapp {
 		width: 100%;
 		justify-content: center;
+	}
+}
+
+@keyframes scrolling {
+	from {
+		opacity: 0;
+		scale: 0.5;
+	}
+	to {
+		opacity: 1;
+		scale: 1;
+	}
+}
+
+@keyframes fadein {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
 	}
 }
